[package]
name = "rs_webos"
version = "0.5.1"
authors = []
edition = "2021"
description = "LG webOS client"
readme = "README.md"
repository = "https://github.com/d-kja/rs-webos"
license-file = "LICENSE"
keywords = ["lg", "webos", "client"]

[dependencies]
tokio-tungstenite = "0.21.0"
futures = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.24.1", default-features = false, features = ["rt"] }
url = "2.3.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"]}
log = "0.4.17"
ws = { package = "rocket_ws", version = "0.1.0" }

[dev-dependencies]
env_logger = "0.11.0"
tokio = { version = "1.24.1", default-features = false, features = ["full"] }
